force-app/main/default/objects/PartnerEvent__c/PartnerEvent__c.object-meta.xml
<CustomObject>
    <description>Company hosted partner events are held on for partners and contacts.</description>
    <label>Partner Event</label>
    <nameField>
        <displayFormat>PE-{000000}</displayFormat>
        <label>Partner Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>