force-app/main/default/objects/PartnerEvent__c/fields/Capacity__c.field-meta.xml
<CustomField>
    <fullName>Capacity__c</fullName>
    <description>Capacity of the event. The maximum number of accepted invites.</description>
    <inlineHelpText>Capacity of the event. The maximum number of accepted invites.</inlineHelpText>
    <label>Capacity</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>