force-app/main/default/objects/PartnerEvent__c/fields/Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Date_Time__c</fullName>
    <description>The date and time of the event</description>
    <label>Date Time</label>
    <type>DateTime</type>
</CustomField>