force-app/main/default/objects/PartnerEvent__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>A rich text description of the event.</description>
    <inlineHelpText>A rich text description of the event.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>