force-app/main/default/objects/PartnerEvent__c/fields/Event_Name__c.field-meta.xml
<CustomField>
    <fullName>Event_Name__c</fullName>
    <description>Name of the event</description>
    <label>Event Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>