force-app/main/default/objects/PartnerEvent__c/validationRules/Capacity_must_be_over_zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Capacity_must_be_over_zero</fullName>
    <active>true</active>
    <description>A PartnerEvent must have a capacity greater than zero</description>
    <errorConditionFormula>Capacity__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Capacity__c</errorDisplayField>
    <errorMessage>A PartnerEvent must have a capacity greater than zero</errorMessage>
</ValidationRule>