force-app/main/default/objects/PartnerEvent__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Event_Name__c</columns>
    <columns>Date_Time__c</columns>
    <columns>Capacity__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>